--- a/dc.html
+++ b/dc.html
@@ -1,1 +1,8 @@
-<a href="https://discord.gg/RvMEDVGnBB">redirecting..., if not click this link</a>
+<head>
+	<title>redirectiing...</title>
+</head>
+
+<body>
+	<script type="text/javascript" src="./dc-script.js"></script>
+	<a href="https://discord.gg/RvMEDVGnBB">redirecting..., if not click this link</a>
+</body>
